fix aspect ratio issue on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -92,6 +92,7 @@ body {
 
 mux-player {
   --controls: none;
+  --media-object-fit: cover;
 }
 
 a {
